# poetry-brew

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/poetry_brew/: plugin.py  templates.py
